--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -8,11 +8,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=”tanzania_map.jpg” width=”100” height=”100”>"
+    "<img src=”Images/tanzania_map.jpg” width=”100” height=”100”>"
    ]
   },
   {
