--- a/Data_Analysis.ipynb
+++ b/Data_Analysis.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=”Images/tanzania_map.jpg” width=”100” height=”100”>"
+    "<img src=\"./images/water.jpg\" \n",
+    "     align=\"left\" \n",
+    "     width=\"400\" />"
    ]
   },
   {
